Save both file_kind and stat_kind
